--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,33 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-main: #F35C7A;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.scrollbar-hide {
+  scrollbar-width: none;
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+#imageZoom{
+  cursor: zoom-in;
+}
+#imageZoom img{
+  object-position: 0 0;
+}
+#imageZoom::after {
+  display: var(--display);
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-image: var(--image-url);
+  background-size: 200%;
+  background-position: var(--zoom-x) var(--zoom-y);
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none; /* So it doesn't interfere with mouse tracking */
+  z-index: 10;
 }
